# znuzhgfw

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  report.html
.github/: PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
znuzhgfw/: cli.py  main.py
znuzhgfw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
znuzhgfw/core/: crawler.py  engine.py  logger.py  payloads.py  report.py  report_html.py  scanner_base.py  utils.py
znuzhgfw/scanners/: __init__.py  crlf.py  dirscan.py  headers.py  lfi.py  methods.py  ratelimit.py  redirect.py  sqli.py  ssti.py  waf.py  xss.py
